<resources>
    <string name="app_name">My Tips</string>
    <string name="string_my_tips">My Tips</string>
    <string name="you_can_create_create_your_own_profile_for_n_receiving_your_tips">You can create create your own profile for receiving your TIPS .</string>
    <string name="join_and_n_get_your_tips">Join and Get Your Tips</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="label_welcome_back">Welcome back! You can continue\nto manage your finances</string>
    <string name="label_create_an">Create an account so you can manage your\npersonal finances</string>
    <string name="laebl_email">Email</string>
    <string name="label_first_name">First Name*</string>
    <string name="label_last_name">Last Name*</string>
    <string name="label_phone_number">Phone Number*</string>
    <string name="label_email_address">Email Address*</string>
    <string name="label_confirm_password">Confirm Password*</string>
    <string name="label_password">Password*</string>
    <string name="don_t_have_an_account_register">Don’t have an account! Register</string>
    <string name="don_t_have_an_account_register2">Don’t have an account! Register</string>
    <string name="error_enter_email">Please enter Email Id</string>
    <string name="error_enter_amount">Please enter valid Amount</string>
    <string name="error_password">Please enter password</string>
    <string name="error_valid_message">Please enter valid Email Id</string>
    <string name="label_register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account! Sign In</string>
    <string name="error_min_password">Password must be minimum 8 digit</string>
    <string name="error_password_not_matched">Password and confirm password does not match</string>
    <string name="empty_confirm_password">Please enter confirm password</string>
    <string name="error_firstName">Please enter first name</string>
    <string name="error_lastName">Please enter last name</string>
    <string name="error_valid_phone">Mobile number should be of atleast 8 digits and less than 10 digits.</string>
    <string name="error_phone_number">Please enter phone number</string>
    <string name="phone_verification">Phone verification</string>
    <string name="we_sent_a_code_to_your_number">We’ve sent a code to your number</string>
    <string name="error_enter_otp">Please enter otp</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="enter_your_mobile_number_for_the_verification_process_we_will_send_4_digit_code_to_your_number">Enter your phone number for the verification process we will send 4 digit code to your number</string>
    <string name="label_continue">Continue</string>
    <string name="message_permanently_denied">Permanently Denied</string>
    <string name="message_camera_permission">Camera permission required to capture image!</string>
    <string name="label_change_phone_number">Change Number</string>
    <string name="label_mobile_number_subhead">Enter your phone number for the verification process we will send 4 digit code to your number</string>
    <string name="reset_password">Reset Password</string>
    <string name="set_the_new_password_for_your_account_so_you_can_log_in_and_access_all_the_features">Set the new password for your account so you can log in and access all the features.</string>
    <string name="don_t_receive_your_code_resend">Don\'t receive your code? Resend</string>
    <string name="arpit">Arpit</string>
    <string name="click_here_to_enter_amount">Click Here, To enter amount</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="aed_180_00">+AED 180.00</string>
    <string name="_20_november">20 November</string>
    <string name="transaction">Transaction</string>
    <string name="transactions">Transactions</string>
    <string name="personal_details">Personal Details</string>
    <string name="label_bank_details">Bank Details</string>
    <string name="wallet">Wallet</string>
    <string name="bank_detail">Bank Details</string>
    <string name="arpit_patidar">Arpit patidar</string>
    <string name="al_qadar_bank">Al-Qadar Bank</string>
    <string name="account_number">Account Number*</string>
    <string name="name_account_holder">Name Account Holder</string>
    <string name="account_holder_name">Account Holder\'s Name*</string>
    <string name="label_error_contact_number">Please enter account number</string>
    <string name="label_error_acc">minimum 10 numbers required in account number</string>
    <string name="error_account_not_matched">Account number and confirm account number does not match</string>
    <string name="error_enter_code">Please enter BIC/Swift</string>
    <string name="error_account_holder_name">Please enter account holder\'s name</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="update_user_detail">Update Details</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="total_amount">Total Amount</string>
    <string name="_4000_aed">AED</string>
    <string name="enter_amount">Enter Amount*</string>
    <string name="label_logout">Log out</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="error_profile_photo">Please click profile photo</string>
    <string name="share_qr_code">Share QR code</string>
    <string name="filters">Filters</string>
    <string name="message_logout">Are you sure want to logout?</string>
    <string name="message_withdraw_popup">To withdraw amount you need to have atleast one bank account</string>
    <string name="message_delete">Are you sure want to delete bank account?</string>
    <string name="button_yes">Yes</string>
    <string name="button_ok">OK</string>
    <string name="button_no">No</string>
    <string name="otp_send">OTP sent to mobile number</string>
    <string name="session_expire">Please log in again. We\'re sorry for this inconvenience.</string>
    <string name="logout">LogOut</string>
    <string name="label_bank_name">Bank Name*</string>
    <string name="account_type">Account Type</string>
    <string name="account_type_">Account Type : </string>
    <string name="saving">Saving</string>
    <string name="error_bank_name">Please enter bank name</string>
    <string name="bank_detail_added_successfully">Bank details added successfully</string>
    <string name="user_update_success">Personal details updated successfully</string>
    <string name="no_bank_account_added">No bank account added</string>
    <string name="label_submit">Submit</string>
    <string name="no_internet_connection">Please check your internet connectivity</string>
    <string name="please_enter_confirm_account">Please enter confirm account number</string>
    <string name="try_again">Try Again</string>
    <string name="no_data_found">No data found</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="account_number_">Account Number : </string>
    <string name="ifsc_code">BIC/Swift</string>
    <string name="ifsc_code_">BIC/Swift : </string>
    <string name="terms_condition">By creating an account, I hearby accept all the Terms &amp; Conditions</string>
    <string name="error_terms_condition">Please select terms and condition</string>
    <string name="error_valid_amount">Please enter a valid amount</string>
    <string name="reset_password_successfully">Password changed succesfully.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="dot">: </string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="yearly">Yearly</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_">Frequency : </string>
    <string name="update_your_app">Update Your App</string>
    <string name="there_is_newer_version_available_for_download_please_update_the_app_by_visiting_the_store">There is newer version available for download! Please update the app by visiting the Store.</string>
    <string name="update">Update</string>
    <string name="skip">Skip</string>
    <string name="label_skip">Skip</string>
    <string name="labelnext">Next</string>
    <string name="getting_started">Get Started</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="tutorial_1">Tutorial 1</string>
    <string name="tutorial_2">Tutorial 2</string>
    <string name="profile">Profile</string>
    <string name="activity_progress">Activity Progress</string>
    <string name="resend">Resend</string>
    <string name="text_terms">Terms &amp; Conditions</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="add_bank_details_confirm">Add Bank Details</string>
    <string name="grettings_message">Greeting\'s from My Tips, </string>
    <string name="has_shared">has shared a payment link with you. Please click on the link to proceed with the payment :- </string>
    <string name="my_qr_code">My QR Code</string>
    <string name="transaction_successful">Transaction Successful!!</string>
    <string name="scan_qa_code_to_generate_payment_link_of_100_aed">Scan QR code to Generate Payment Link of %s AED</string>
    <string name="share_qr_one_time_text">If you enjoyed your experience, a tip would be greatly appreciated</string>
    <string name="withdraw">Withdraw</string>
    <string name="restoration">Restoration</string>
    <string name="concierge_hotel_services"><![CDATA[Concierge & Hotel Services]]></string>
    <string name="transportations">Transportations</string>
    <string name="sale">Sale</string>
    <string name="Other">Other</string>
    <string name="reason">Reason</string>
    <string name="my_reason">My Reason</string>
    <string name="change">Change</string>
    <string name="date_of_birth_dob">Date Of Birth</string>
    <string name="change_language">Change Language</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="version">version</string>
    <string name="label_address">Address (Optional)</string>
    <string name="b_id_card">Professional Link</string>
    <string name="label_dob">Date of Birth (Optional)</string>
    <string name="about_me">About Me</string>
    <string name="about_me_hint">Tell us something about yourself...</string>
    <string name="swipe_right_to_start">Swipe Right to Start</string>
    <string name="welcome_to_my_tips">Welcome to My Tips</string>
    <string name="manage_your_finance">Manage your Finance</string>
    <string name="current">Current</string>
    <string name="no_bank_account_added_yet">No bank account added yet</string>
    <string name="please_select_reason">Please select reason</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="jun">Jun</string>
    <string name="may">May</string>
    <string name="july">July</string>
    <string name="sep">Sep</string>
    <string name="aug">Aug</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="mayFull">May</string>
    <string name="june">June</string>
    <string name="julyFull">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="submit">Submit</string>
</resources>