<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/layout_common_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4000_aed"
        android:textSize="@dimen/dp_36"
        style="@style/font_medium.greyB2"
        android:includeFontPadding="false"
        android:textFontWeight="700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewTotalAmmount"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTotalAmmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount"
        style="@style/font_bold.black.14"
        android:textFontWeight="700"
        android:layout_marginBottom="@dimen/dp_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonWithdrawal"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonWithdrawal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdrawal"
        android:textAllCaps="false"
        style="@style/font_bold.white.20"
        android:textFontWeight="600"
        android:paddingHorizontal="@dimen/dp_60"
        android:paddingVertical="@dimen/dp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_generate_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>