<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark1E">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/finalMain"
        android:background="@color/colorPrimaryDark1E">
    <TextView
        android:id="@+id/textViewMyTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_my_tips"
        style="@style/font_bold.white.20"
        android:layout_marginStart="@dimen/dp_76"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/textViewLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textViewLanguage"
        app:layout_constraintTop_toTopOf="@id/textViewLanguage" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/font_medium.white.15"
        android:background="@drawable/bg_change_language"
        android:padding="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:drawablePadding="@dimen/dp_8"
        android:drawableEnd="@drawable/ic_bottom_arrow_white"
        android:text="@string/english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgTest"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginBottom="@dimen/dp_76"
        android:src="@drawable/tutorial_main"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/font_medium.white.30"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/join_and_n_get_your_tips"
        app:layout_constraintTop_toBottomOf="@id/imgTest"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSubHead"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/font_regular.white.14"
        android:layout_marginBottom="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_68"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/you_can_create_create_your_own_profile_for_n_receiving_your_tips"
        app:layout_constraintBottom_toTopOf="@id/layoutBottom"
        app:layout_constraintStart_toStartOf="@id/layoutBottom"/>
    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_76"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_splash_arrow1"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:src="@drawable/ic_splash_arrow2"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:src="@drawable/ic_splash_arrow3"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_24"
                style="@style/font_light.white.16"
                android:text="@string/swipe_right_to_start"/>

    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>