<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/layout_common_toolbar" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/font_medium.black.40"
        android:textSize="@dimen/dp_30"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dp_17"
        android:text="@string/label_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/includeToolbar"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewForgotPasswordSubHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/font_medium.grey7c.12"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/dp_41"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/enter_your_mobile_number_for_the_verification_process_we_will_send_4_digit_code_to_your_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword"/>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_26"
        app:layout_constraintTop_toBottomOf="@id/textViewForgotPasswordSubHead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <include
            android:id="@+id/layoutPhone"
            layout="@layout/layout_phone_number"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonCommon"
        android:layout_marginBottom="@dimen/dp_126"
        android:layout_marginHorizontal="@dimen/dp_41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/label_continue"/>

</androidx.constraintlayout.widget.ConstraintLayout>
